--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="Expires" content="0" /> -->
     <!-- for testing -->
 
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/scope.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>SkyScope</title>
   </head>
   <body>
     <div id="root"></div>
