--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" type="image/svg+xml" href="/scope.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SkyScope</title>
+    <title>Skyscope</title>
   </head>
   <body>
     <div id="root"></div>
