--- a/index.html
+++ b/index.html
@@ -25,5 +25,13 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      (function(j,ennifer) {
+          j['dmndata']=[];j['jenniferFront']=function(args){window.dmndata.push(args)};
+          j['dmnaid']=ennifer;j['dmnatime']=new Date();j['dmnanocookie']=false;j['dmnajennifer']='JENNIFER_FRONT@INTG';
+      }(window, 'e352d3a2'));
+  </script>
+  <script async src="https://d-collect.jennifersoft.com/e352d3a2/demian.js"></script>
+  
   </body>
 </html>
